# Speculator

./: CMakeLists.txt  README.md
Source/: CustomLookAndFeel.h  DSPUtils.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplePlayer.cpp  SamplePlayer.h  WaveformDisplay.h
